[gd_scene load_steps=6 format=2]

[ext_resource path="res://themes/Retro.tres" type="Theme" id=1]
[ext_resource path="res://interface/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://marketing/header.png" type="Texture" id=3]
[ext_resource path="res://interface/VolumeSlider.gd" type="Script" id=4]
[ext_resource path="res://music/TitleScreen.wav" type="AudioStream" id=5]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="TitleTexture" type="TextureRect" parent="."]
margin_left = 100.0
margin_top = 20.0
margin_right = 1600.0
margin_bottom = 520.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -250.0
margin_right = 58.0
margin_bottom = -50.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 108.0
margin_bottom = 26.0
text = "Start"

[node name="ArcadeButton" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 30.0
margin_right = 108.0
margin_bottom = 56.0
disabled = true
text = "Arcade Mode"

[node name="FullscreenButton" type="Button" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 108.0
margin_bottom = 56.0
text = "Fullscreen"

[node name="VolumeLabel" type="Label" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 108.0
margin_bottom = 76.0
text = "Volume:"
align = 1

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 108.0
margin_bottom = 96.0
max_value = 1.0
value = 1.0
ticks_on_borders = false
script = ExtResource( 4 )

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 108.0
margin_bottom = 126.0
text = "Credits"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 130.0
margin_right = 108.0
margin_bottom = 156.0
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/FullscreenButton" to="." method="_on_FullscreenButton_pressed"]
[connection signal="value_changed" from="VBoxContainer/VolumeSlider" to="VBoxContainer/VolumeSlider" method="_on_VolumeSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
